# whispipe

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  shell.nix  whispipe.sh
whispipe/: __init__.py  __main__.py  whispipe.py
