[tool.poetry]
name = "whispipe"
version = "0.1.0"
description = "pipe voice control to stdout"
authors = ["7jane <7janeta@proton.me>"]
readme = "README.md"
packages = [{include = "whispipe"}]

[tool.poetry.dependencies]
python = "^3.8"
openai-whisper = "^20240930"
sounddevice = "^0.5.0"
torch = { url = "https://download.pytorch.org/whl/rocm6.1/torch-2.4.1%2Brocm6.1-cp312-cp312-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/rocm6.1/torchvision-0.19.1%2Brocm6.1-cp312-cp312-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/rocm6.1/torchaudio-2.4.1%2Brocm6.1-cp311-cp311-linux_x86_64.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
